# crawley

./: .coverage  .gitignore  .travis.yml  404.html  CHANGELOG.md  MANIFEST.in  README.md  README.txt  about.html  build_deb.sh  clean.sh  crawler.py  crawler_test.sqlite  default.css  index.html  manage.py  mkdocs.yml  models.py  objects.inv  pyproject.toml  requirements.txt  run_tests.py  settings.py  setup.py  styles.css  test  upload.sh  url.html
.github/workflows/: ci.yml  docs.yml
bootstrap/: bootstrap.css
cli/: index.html
crawler/: index.html
crawley/: __init__.py  config.py  crawler_test.sqlite  crawlers.py  exceptions.py  extractors.py  middlewares.py  persistance.py  pipelines.py  scrapers.py  scraping.py  scrappers.py  spider.py  spiders.py  stats.py  toolbox.py  utils.py
crawley.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crawley/IA/generator/: re_matcher.py
crawley/conf/project_template/: config.py  crawlers.py  manage.py  models.py  settings.py
crawley/conf/templates/: crawlers.tm  metadata.tm  settings.tm
crawley/crawlers/: __init__.py  base.py  base.py.orig  fast.py  offline.py  smart.py
crawley/http/: __init__.py  autothrottle.py  cache.py  cookies.py  managers.py  managers.py.orig  playwright.py  request.py  response.py  retry.py  robots.py  throttle.py  urls.py
crawley/ia_generator/: re_matcher.py
crawley/manager/: __init__.py  commands.py  generators.py  utils.py
crawley/manager/commands/: __init__.py  browser.py  command.py  migratedb.py  run.py  shell.py  startproject.py  syncdb.py  utils.py
crawley/manager/projects/: __init__.py  base.py  code.py  database.py  template.py
crawley/multiprogramming/: __init__.py  collections.py  pool.py  threads.py
crawley/parser/: Crawley-BNF.txt  actions.py  analizer.py  parser.py  properties.py  test_parser.py  utils.py
crawley/parser/javaWorkspace/: .project  Crawley-BNF.txt
crawley/parser/parsers/: __init__.py  compound_parser.py  crawley_dsl.py  otro_parser.py  parser.py  recursive_parser.py  simple_parser.py  utils.py
crawley/parser/py_parser/: .properties.py.swp  actions.py  parser.py  properties.py  test_parser.py  utils.py
crawley/persistance/: __init__.py  connectors.py  databases.py  documents.py
crawley/persistance/documents/: __init__.py  csv_doc.py  document.py  json.py  json_doc.py  meta.py  xml.py
crawley/persistance/nosql/: __init__.py  base.py  couch.py  mongo.py
crawley/persistance/relational/: __init__.py  connectors.py  databases.py
crawley/scrapers/: __init__.py  base.py  smart.py
crawley/simple_parser/: Simple_BNF.txt  __init__.py  compilers.py  config_parser.py  parsers.py
crawley/smtp/: __init__.py  sender.py
crawley/utils/: __init__.py  common.py  files.py  matchers.py  projects.py
crawley/utils/collections/: __init__.py  custom_dict.py  ordered_dict.py
crawley/web_browser/: README.txt  __init__.py  base.py  baseBrowser.py  browser.py  browser.ui  config.py  gui_project.py  run.py  template.py
crawley/web_browser/GUI/: __init__.py  base.py  (+7 more)
doc/: Makefile  make.bat
doc/source/: conf.py  example.rst  index.rst  more_examples.rst  reference.rst  settings.rst
docs/: cli.md  crawler.md  example.html  genindex.html  index.html  index.md  installation.md  more_examples.html  objects.inv  persistence.md  politeness.md  py-modindex.html  reference.html  reference.md  scraping.md  search.html  searchindex.js  settings.html  spiders.md
docs/_modules/: index.html
examples/: 01_scraping_quickstart.py  02_crawler.py  03_polite_crawler.py  04_persistence_json.py  05_concurrent_fetch.py  06_spider.py  README.md  modern_scraping.py  settings.py
examples/documents_storage/: data.csv  settings.py
examples/ebay/: __init__.py  settings.py
examples/pypi_crawler/: settings.py
examples/pypi_crawler_dsl/: settings.py
examples/pypi_mongo/: __init__.py  get_all.py  settings.py
examples/pypi_packages/: README.txt  settings.py
examples/pypi_packages_template/: __init__.py  settings.py
examples/xml_document/: data.xml  settings.py
installation/: index.html
persistence/: index.html
politeness/: index.html
reference/: index.html
scraping/: index.html
search/: search_index.json
spiders/: index.html
src/: crawley-admin.py  manage.py  settings.py
src/crawley/: crawlers.py  scrapers.py
src/test_app/: crawler.py
test/: settings.py
test/test/: crawlers.py  models.py
test_app/: crawler.py  settings.py
test_app/test_app/: crawlers.py  models.py
tests/: commands_test.py  conftest.py  crawler_test.py  crawlerreq_http.py  http_daemon.py  http_test.py  persistance_test.py  simple_parser_test.py  test_autothrottle.py  test_basics.py  test_cache.py  test_commands.py  test_config_parser.py  test_connectors.py  test_cookies.py  test_crawler.py  test_crawler_events.py  test_dedupe.py  test_dsl.py  test_examples.py  test_extractors.py  test_forms.py  test_http.py  test_integration.py  test_manager.py  test_matchers.py  test_middlewares.py  test_nosql.py  test_offline_fast.py  test_persistance.py  test_playwright.py  test_pool.py  test_response.py  test_retry.py  test_robots.py  test_scrapers.py  test_scraping.py  test_smart_scraper.py  test_smtp.py  test_spider.py  (+6 more)
tests/dsl_project/: settings.py
tests/dsl_tests/: settings.py
tests/test_project/: __init__.py  settings.py
zarasa/: settings.py
zarasa/zarasa/: crawlers.py  models.py
(+54 files in other folders)
